added git hook (i think)

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,9 +1,7 @@
 ---
 output: github_document
 ---
-
 <!-- README.md is generated from README.Rmd. Please edit that file -->
-
 
 ```{r echo=FALSE}
 knitr::opts_chunk$set(
@@ -30,7 +28,7 @@ knitr::opts_chunk$set(
 `webchem` is a R package to retrieve chemical information from  the web. 
 This package interacts with a suite of web APIs to retrieve chemical information.
 
-The functions in the package that hit a specific API have a prefix and suffix separated by an underscore (`prefix_suffix()`)
+The functions in the package that hit a specific API have a prefix and suffix separated by an underscore (`prefix_suffix()`).
 They follow the format of `source_functionality`, with the exception of functions that retrieve database identifiers which follow the format of `get_identifier`. e.g.`cs_compinfo` uses ChemSpider to retrieve compound informations and `get_csid()` retrieves ChemSpider IDs.
 
 
