--- a/NEWS
+++ b/NEWS
@@ -14,7 +14,7 @@ BUG FIXES
 
 * cs_prop() failed with duplicated return values [issue #148, reported and fixed by @stanstrup]
 * pp_query() failed when compound present, but no properties [issue #151, reported and fixed by @stanstrup]
-
+* ci_query() failed when missing table [issue #196, reported and fixed by @gjgetzinger]
 
 DEPRECATED FUNCTIONS
 
