--- a/NEWS
+++ b/NEWS
@@ -26,6 +26,8 @@ DEPRECATED FUNCTIONS
 
 DEFUNCT FUNCTIONS
 
+* ppdb_parse() has been removed. webchem no longer offers any support for PPDB.
+
 
 webchem 0.4
 ======================
