Fix get_etoxid() for all match types

--- a/NEWS
+++ b/NEWS
@@ -19,6 +19,7 @@ BUG FIXES
 * multiple functions failed because of a major change in the ChemSpider API [issue #149, contributed by @stitam]
 * cir_query() mistook NA for sodium [issue #158, reported and fixed by @Aariq]
 * fixed functions that communicate with the ChemSpider API [issue #149, issue #160, fixed by @stitam]
+* get_etoxid() printed incorrect results for certain match types [issue #201, fixed by @stitam]
 
 DEPRECATED FUNCTIONS
 
