--- a/NEWS
+++ b/NEWS
@@ -30,6 +30,7 @@ DEPRECATED FUNCTIONS
 DEFUNCT FUNCTIONS
 
 * ppdb_parse() has been removed. webchem no longer offers any support for PPDB.
+* pp_query() has been removed. Physprop API is no longer active.
 
 
 webchem 0.4
