--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ MINOR IMPROVEMENTS
 
 BUG FIXES
 
+* get_cid() returned the PubChem ID of sodium when the query was NA [PR #223, fixed by stitam]
 * aw_query() returned a list for successful queries, NA for unsuccessful queries [PR #222, fixed by stitam]
 
 DEPRECATED FUNCTIONS
