--- a/NEWS
+++ b/NEWS
@@ -3,10 +3,13 @@ webchem 0.6.0
 
 NEW FEATURES
 
+* nist_ri() now can search by name, InChI, InChIkey, or CAS#.  The `cas` argument is deprecated.  Use `query` instead with `from = "cas"`
+
 MINOR IMPROVEMENTS
 
 BUG FIXES
 
+* nist_ri() returned malformed tables or errored if there was only one entry for a query
 * get_csid() returned an error when query was NA [PR #226, fixed by stitam]
 * get_chebiid() and chebi_comp_entity() fixed for invalid queries [PR #225, fixed by stitam]
 * get_cid() returned the PubChem ID of sodium when the query was NA [PR #223, fixed by stitam]
