--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,9 @@
-webchem 0.6.0
+webchem 0.5.0.9000
 ======================
 
 NEW FEATURES
 
-* nist_ri() now can search by name, InChI, InChIkey, or CAS#.  The `cas` argument is deprecated.  Use `query` instead with `from = "cas"`
+* nist_ri() now can search by name, InChI, InChIKey, or CAS.  The `cas` argument is deprecated.  Use `query` instead with `from = "cas"`
 
 MINOR IMPROVEMENTS
 
