added CAS, EC, GSBL, RTECS search options to get_etoxid()

--- a/NEWS
+++ b/NEWS
@@ -3,12 +3,13 @@ webchem 0.5.0.9000
 
 NEW FEATURES
 
+* get_etoxid() now can search by CAS, EC, GSBL and RTECS numbers. Added `from = ` argument. [PR #240, added by @andschar]
+
 * nist_ri() now can search by name, InChI, InChIKey, or CAS.  The `cas` argument is deprecated.  Use `query` instead with `from = "cas"`
 
 MINOR IMPROVEMENTS
 
 BUG FIXES
-
 
 * nist_ri() returned malformed tables or errored if there was only one entry for a query
 * get_csid() now returns all csids when queried from formula
