--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,9 @@ NEW FEATURES
 
 MINOR IMPROVEMENTS
 
+* all `get_*()` functions now output tibbles with a column for the query and a column for the retrieved ID
+* changes to arguments in `get_*()` functions to make them more consistent
+
 BUG FIXES
 
 * get_csid() now returns all csids when queried from formula
