Update get_cid() to handle complex queries

--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,11 @@
-webchem 0.5.0.9001
+webchem 0.5.0.9006
 ======================
 
 NEW FEATURES
 
+* get_cid() now can search by registry IDs (e.g. CAS RN), and can handle more complex requests like searching for similar compounds.
+* get_sid() is a new function that can retrieve substance IDs from PubChem based on name, registry ID (e.g. CAS RN), or source ID.
 * get_etoxid() now can search by CAS, EC, GSBL and RTECS numbers. Added `from = ` argument. [PR #241, added by @andschar]
-
 * nist_ri() now can search by name, InChI, InChIKey, or CAS.  The `cas` argument is deprecated.  Use `query` instead with `from = "cas"`
 
 MINOR IMPROVEMENTS
