changed codecov badge to master branch since we're not using test branch anymore

--- a/README.Rmd
+++ b/README.Rmd
@@ -22,12 +22,13 @@ knitr::opts_chunk$set(
 
 [![Build Status](https://travis-ci.org/ropensci/webchem.png)](https://travis-ci.org/ropensci/webchem) 
 [![Build status](https://ci.appveyor.com/api/projects/status/e3sa6e918jlemv46/branch/master)](https://ci.appveyor.com/project/EDiLD/webchem) 
-[![Coverage Status](https://codecov.io/github/ropensci/webchem/coverage.svg?branch=tests)](https://codecov.io/gh/ropensci/webchem/branch/tests) 
+[![Coverage Status](https://codecov.io/github/ropensci/webchem/coverage.svg?branch=master)](https://codecov.io/gh/ropensci/webchem/branch/master) 
 [![Open Issues](https://img.shields.io/github/issues/ropensci/webchem.svg)](https://github.com/ropensci/webchem/issues) 
 [![](https://cranlogs.r-pkg.org/badges/webchem)](https://cran.r-project.org/package=webchem)
 [![CRAN status](https://www.r-pkg.org/badges/version/webchem)](https://CRAN.R-project.org/package=webchem) 
 [![DOI](https://zenodo.org/badge/17223/ropensci/webchem.svg)](https://zenodo.org/badge/latestdoi/17223/ropensci/webchem) 
 
+[![Codecov test coverage](https://codecov.io/gh/ropensci/webchem/branch/master/graph/badge.svg)](https://codecov.io/gh/ropensci/webchem?branch=master)
 <!-- badges: end -->
 
 `webchem` is a R package to retrieve chemical information from  the web. 
