--- a/README.Rmd
+++ b/README.Rmd
@@ -88,6 +88,8 @@ Without the fantastic web services `webchem` wouldn't be here. Therefore, kudos 
 
 ### Related Projects
 
+You can find some related packages in the [ChemPhys CRAN Task View](https://cran.r-project.org/web/views/ChemPhys.html)
+
 If you're more familiar with Python you should check out [Matt Swains](https://github.com/mcs07) repositories: [ChemSpiPy](https://github.com/mcs07/ChemSpiPy), [PubChemPy](https://github.com/mcs07/PubChemPy) and [CirPy](https://github.com/mcs07/CIRpy) provide similar functionality as `webchem`.
 
 ### Want to contribute?
