--- a/README.Rmd
+++ b/README.Rmd
@@ -102,6 +102,6 @@ Check out our [contribution guide here](https://github.com/ropensci/webchem/blob
 - Please [report any issues, bugs or feature requests](https://github.com/ropensci/webchem/issues).
 - License: MIT
 - Get citation information for `webchem` in R with `citation("webchem")`
-  
+- Please note that this package is released with a [Contributor Code of Conduct](https://ropensci.org/code-of-conduct/). By contributing to this project, you agree to abide by its terms.
 
 [![ropensci](http://ropensci.org/public_images/github_footer.png)](http://ropensci.org)
