--- a/README.Rmd
+++ b/README.Rmd
@@ -80,6 +80,7 @@ install_github("ropensci/webchem")
 Have you used `webchem` in your work?  Please let us know by opening an issue or making a pull request to edit this section!
 
 - Noecker C, Sanchez J, Bisanz JE, Escalante V, Alexander M, et al. (2023) Systems biology elucidates the distinctive metabolic niche filled by the human gut microbe Eggerthella lenta. PLOS Biology 21(5): e3002125. https://doi.org/10.1371/journal.pbio.3002125
+- Klupinski, T.P., Moyer, R.A., Chen, P.-H.A., Strozier, E.D., Buehler, S.S., Friedenberg, D.A., Koszowski, B., 2022. A procedure to detect and identify specific chemicals of potential inhalation toxicity concern in aerosols. Inhalation Toxicology 34, 120–134. https://doi.org/10.1080/08958378.2022.2051646
 - Passos Mansoldo, F.R., Garrett, R., da Silva Cardoso, V., Alves, M.A., Vermelho, A.B., (2022) Metabology: Analysis of metabolomics data using community ecology tools. Analytica Chimica Acta 1232, 340469. https://doi.org/10.1016/j.aca.2022.340469
 - Song, Xuechao & Dreolin, Nicola & Canellas, Elena & Goshawk, Jeff & Nerín, Cristina. (2022). Prediction of Collision Cross-Section Values for Extractables and Leachables from Plastic Products. Environmental Science and Technology. 56. 9463-9473. 10.1021/acs.est.2c02853. 
 - Allaway RJ, La Rosa S, Guinney J, Gosline SJC (2018) Probing the chemical–biological relationship space with the Drug Target Explorer. Journal of Cheminformatics 10:41. https://doi.org/10.1186/s13321-018-0297-4
