--- a/README.Rmd
+++ b/README.Rmd
@@ -44,11 +44,11 @@ At least some of the data in the following sources is accesible through `webchem
 - [ChEBI](https://www.ebi.ac.uk/chebi/)
 - [Chemical Identifier Resolver (CIR)](https://cactus.nci.nih.gov/chemical/structure)
 - [Chemical Translation Service (CTS)](http://cts.fiehnlab.ucdavis.edu/)
-- [ChemSpider](http://www.chemspider.com/) (requires an [API token](https://developer.rsc.org/))
+- [ChemSpider](https://www.chemspider.com/) (requires an [API token](https://developer.rsc.org/))
 - [ETOX](http://webetox.uba.de/webETOX/index.do)
 - [Flavornet](http://www.flavornet.org) 
 - [NIST](https://webbook.nist.gov) (currently gas chromatography retention indices only)
-- [OPSIN](http://opsin.ch.cam.ac.uk/instructions.html)
+- [OPSIN](https://www.ebi.ac.uk/opsin/)
 - [PubChem](https://pubchem.ncbi.nlm.nih.gov/)
 - [U.S. EPA Substance Registry Service (SRS)](https://cdxnodengn.epa.gov/cdx-srs-rest/)
 - [Wikidata](https://www.wikidata.org/wiki/Wikidata:WikiProject_Chemistry)
