Add ChEMBL to README

--- a/README.Rmd
+++ b/README.Rmd
@@ -42,6 +42,7 @@ At least some of the data in the following sources is accesible through `webchem
 
 - [BCPC Compendium of Pesticide Common Names](https://pesticidecompendium.bcpc.org) (formerly Alan Wood's Compendium of Pesticide Common Names)
 - [ChEBI](https://www.ebi.ac.uk/chebi/)
+- [ChEMBL](https://www.ebi.ac.uk/chembl/)
 - [Chemical Identifier Resolver (CIR)](https://cactus.nci.nih.gov/chemical/structure)
 - [Chemical Translation Service (CTS)](http://cts.fiehnlab.ucdavis.edu/)
 - [ChemSpider](https://www.chemspider.com/) (requires an [API token](https://developer.rsc.org/))
